--- a/config.yaml
+++ b/config.yaml
@@ -61,8 +61,10 @@ cluster_options:
     exclude_carriers: []
     remove_stubs: true
     remove_stubs_across_borders: true
-    p_threshold_drop_isolated: 20 # [MW] isolated buses are being discarded if bus mean power is below the specified threshold
-    p_threshold_merge_isolated: 300 # [MW] isolated buses are being merged into a single isolated bus if bus mean power is above the specified threshold
+    p_threshold_drop_isolated: false ##### 20 # [MW] isolated buses are being discarded if bus mean power is below the specified threshold
+    p_threshold_merge_isolated: false ##### 300 # [MW] isolated buses are being merged into a single isolated bus if bus mean power is above the specified threshold
+    isolated_exclusion: false ####### section added to use new (true) or old (false) version of the code in the simplify_network.py script
+  busmap_subnetwork: false ####### section added to use new (true) or old (false) version of the code in the cluster_network.py script
   cluster_network:
     algorithm: kmeans
     feature: solar+onwind-time
