Changes made: *Additional notebook created to plot renewable resources *Add_electricity script and config file have been modified based on new PR from pypsa-earth repository to allow better representation of renewable powerplants (solar and wind) from the custom_powerplants csv file

--- a/config.yaml
+++ b/config.yaml
@@ -137,7 +137,7 @@ electricity:
     H2: 168
 
   extendable_carriers:
-    Generator: [CCGT, OCGT, solar, onwind]               ##  offwind-ac & offwind-dc are removed 
+    Generator: [CCGT, OCGT, solar, onwind, hydro]               ##  offwind-ac & offwind-dc are removed 
     StorageUnit: []  # battery, H2
     Store: [battery, H2]
     Link: []  # H2 pipeline
