--- a/config.yaml
+++ b/config.yaml
@@ -149,7 +149,7 @@ electricity:
   renewable_carriers: [solar, onwind, hydro]          ## offwind-ac, offwind-dc, are removed
 
   estimate_renewable_capacities:
-    stats: "irena"  # False, = greenfield expansion, 'irena' uses IRENA stats to add expansion limits
+    stats: False #### "irena" was commented out to allow the usage of custom_powerplants data ####  # False, = greenfield expansion, 'irena' uses IRENA stats to add expansion limits
     year: 2020  # Reference year, available years for IRENA stats are 2000 to 2020
     p_nom_min: 1  # any float, scales the minimum expansion acquired from stats, i.e. 110% of <years>'s capacities => p_nom_min: 1.1
     p_nom_max: false  # sets the expansion constraint, False to deactivate this option and use estimated renewable potentials determine by the workflow, float scales the p_nom_min factor accordingly
@@ -298,6 +298,7 @@ renewable:
       method: eia  # 'hydro_capacities' to rescale country hydro production by using hydro_capacities, 'eia' to rescale by eia data, false for no rescaling
       year: 2013  # (optional) year of statistics used to rescale the runoff time series. When not provided, the weather year of the snapshots is used
     multiplier: 1.1  # multiplier applied after the normalization of the hydro production; default 1.0
+    sddp_datas: True ###### section added to use local inflow data (True) or pypsa-calculated inflow data (False) used in the add_electricity script
 
 # TODO: Needs to be adjusted for Africa
 costs:
