Changes made: *the snakefile has been modified (lines 167) to include an additional input in the clean_osm_data rule named "custom_lines" which reads a new file in the data folder named "custom_lines.geojson" *the config file has been modified (lines 104) to include a flag named "use_custom_lines" to define if the model will use the default osm data or the custom file *the clean_osm_script has been adapted (line 813) to include a conditional (if), linked to the flag in the config file in order to use either the default osm data or the custom data file to create the base dataframe of lines (df_lines)

--- a/config.yaml
+++ b/config.yaml
@@ -101,6 +101,7 @@ clean_osm_data_options:  # osm = OpenStreetMap
   tag_substation: "transmission"  # Filters only substations with 'transmission' tag, ('distribution' also available)
   add_line_endings: true  # When "True", then line endings are added to the dataset of the substations
   generator_name_method: OSM  # Methodology to specify the name to the generator. Options: OSM (name as by OSM dataset), closest_city (name by the closest city)
+  use_custom_lines: False  ###### section (flag) added to use customized lines data (True) or osm downloaded lines data (False) in the clean_osm_data script 
 
 build_osm_network:  # Options of the build_osm_network script; osm = OpenStreetMap
   group_close_buses: true  # When "True", close buses are merged and guarantee the voltage matching among line endings
