--- a/config.yaml
+++ b/config.yaml
@@ -32,7 +32,7 @@ enable:
   retrieve_databundle: false  #  Recommended 'true', for the first run. Otherwise data might be missing.
   retrieve_cost_data: false  # true: retrieves cost data from technology data and saves in resources/costs.csv, false: uses cost data in data/costs.csv
   download_osm_data: false  # If 'true', OpenStreetMap data will be downloaded for the above given countries
-  build_natura_raster: false  # If True, than an exclusion raster will be build
+  build_natura_raster: true  # If True, than an exclusion raster will be build
   build_cutout: false
   # If "build_cutout" : true, then environmental data is extracted according to `snapshots` date range and `countries`
   # requires cds API key https://cds.climate.copernicus.eu/api-how-to
@@ -101,7 +101,7 @@ clean_osm_data_options:  # osm = OpenStreetMap
   tag_substation: "transmission"  # Filters only substations with 'transmission' tag, ('distribution' also available)
   add_line_endings: true  # When "True", then line endings are added to the dataset of the substations
   generator_name_method: OSM  # Methodology to specify the name to the generator. Options: OSM (name as by OSM dataset), closest_city (name by the closest city)
-  use_custom_lines: False  ###### section (flag) added to use customized lines data (True) or osm downloaded lines data (False) in the clean_osm_data script 
+  use_custom_lines: True  ###### section (flag) added to use customized lines data (True) or osm downloaded lines data (False) in the clean_osm_data script 
 
 build_osm_network:  # Options of the build_osm_network script; osm = OpenStreetMap
   group_close_buses: true  # When "True", close buses are merged and guarantee the voltage matching among line endings
