--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ run:
 scenario:
   simpl: ['']
   ll: ['copt']
-  clusters: [30]
+  clusters: [4]
   opts: [Co2L-1H]
 
 countries: ["BO"]
@@ -101,7 +101,12 @@ clean_osm_data_options:  # osm = OpenStreetMap
   tag_substation: "transmission"  # Filters only substations with 'transmission' tag, ('distribution' also available)
   add_line_endings: true  # When "True", then line endings are added to the dataset of the substations
   generator_name_method: OSM  # Methodology to specify the name to the generator. Options: OSM (name as by OSM dataset), closest_city (name by the closest city)
-  use_custom_lines: True  ###### section (flag) added to use customized lines data (True) or osm downloaded lines data (False) in the clean_osm_data script 
+  use_custom_lines: "Add_custom"  # Flag added to use customized (Custom_only), OSM-downloaded (OSM_only), or both (Add_custom) in the clean_osm_data script (custom information should follow the format of the respective OSM .geojson file in the data folder)
+  custom_path_lines: C:\Users\Lenovo\Desktop\pypsa-earth\data\custom_lines.geojson # Provide the specific absolute path of the custom file including its name and type e.g. (C:\...\...\pypsa-earth\data\custom_lines.geojson)
+  use_custom_substations: "OSM_only"  # Flag added to use customized (Custom_only), OSM-downloaded (OSM_only), or both (Add_custom) in the clean_osm_data script (custom information should follow the format of the respective OSM .geojson file in the data folder)
+  custom_path_cables: False # Provide the specific absolute path of the custom file including its name and type e.g. (C:\...\...\pypsa-earth\data\custom_substations.geojson)
+  use_custom_cables: "OSM_only"  # Flag added to use customized (Custom_only), OSM-downloaded (OSM_only), or both (Add_custom) in the clean_osm_data script (custom information should follow the format of the respective OSM .geojson file in the data folder)
+  custom_path_cables: False # Provide the specific absolute path of the custom file including its name and type e.g. (C:\...\...\pypsa-earth\data\custom_cables.geojson)
 
 build_osm_network:  # Options of the build_osm_network script; osm = OpenStreetMap
   group_close_buses: true  # When "True", close buses are merged and guarantee the voltage matching among line endings
